crates/ddlog-syntax/tests/validation/fail/double_extern_function.dl
// kind:item validate:true pass:false ignore:false
extern extern function foo() {}
